--- a/HTML-CSS/10.2 Grid Placement/exercise2.html
+++ b/HTML-CSS/10.2 Grid Placement/exercise2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+gvv<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -37,6 +37,7 @@
 
     .astronaut {
       background-color: #03989E;
+      grid-column: span 2;
       order: 1;
 
       /* TODO: Make the astronaut box look like the goal2 image. */
